--- a/priv/admin/css/fonts.styl
+++ b/priv/admin/css/fonts.styl
@@ -4,23 +4,49 @@
 */
 
 @font-face {
-  font-family: 'rokkitt';
-  src: url('/admin/ui/fonts/rokkitt.eot');
-  src: url('/admin/ui/fonts/rokkitt.eot?#iefix') format('embedded-opentype'),
-       url('/admin/ui/fonts/rokkitt.woff') format('woff'),
-       url('/admin/ui/fonts/rokkitt.ttf') format('truetype'),
-       url('/admin/ui/fonts/rokkitt.svg#rokkitt') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'noticia';
+    src: url('/admin/ui/fonts/noticiatext-italic-webfont.eot');
+    src: url('/admin/ui/fonts/noticiatext-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/admin/ui/fonts/noticiatext-italic-webfont.woff') format('woff'),
+         url('/admin/ui/fonts/noticiatext-italic-webfont.ttf') format('truetype'),
+         url('/admin/ui/fonts/noticiatext-italic-webfont.svg#noticia_textitalic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+
 }
 
 @font-face {
-  font-family: 'rokkitt';
-  src: url('/admin/ui/fonts/rokkitt-bold.eot');
-  src: url('/admin/ui/fonts/rokkitt-bold.eot?#iefix') format('embedded-opentype'),
-       url('/admin/ui/fonts/rokkitt-bold.woff') format('woff'),
-       url('/admin/ui/fonts/rokkitt-bold.ttf') format('truetype'),
-       url('/admin/ui/fonts/rokkitt-bold.svg#rokkittbold') format('svg');
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'noticia';
+    src: url('/admin/ui/fonts/noticiatext-regular-webfont.eot');
+    src: url('/admin/ui/fonts/noticiatext-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/admin/ui/fonts/noticiatext-regular-webfont.woff') format('woff'),
+         url('/admin/ui/fonts/noticiatext-regular-webfont.ttf') format('truetype'),
+         url('/admin/ui/fonts/noticiatext-regular-webfont.svg#noticia_textregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium';
+    src: url('/admin/ui/fonts/titilliumtext25l002-webfont.eot');
+    src: url('/admin/ui/fonts/titilliumtext25l002-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/admin/ui/fonts/titilliumtext25l002-webfont.woff') format('woff'),
+         url('/admin/ui/fonts/titilliumtext25l002-webfont.ttf') format('truetype'),
+         url('/admin/ui/fonts/titilliumtext25l002-webfont.svg#titilliumtext25l600_wt') format('svg');
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'titillium';
+    src: url('/admin/ui/fonts/titilliumtext25l005-webfont.eot');
+    src: url('/admin/ui/fonts/titilliumtext25l005-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/admin/ui/fonts/titilliumtext25l005-webfont.woff') format('woff'),
+         url('/admin/ui/fonts/titilliumtext25l005-webfont.ttf') format('truetype'),
+         url('/admin/ui/fonts/titilliumtext25l005-webfont.svg#titilliumtext25l1_wt') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
