--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -6,7 +6,8 @@ Imports and arranges all other stylus files.
 .headline-bold,
 .gui-headline,
 .gui-headline-bold,
-.gui-headline-bold {
+.gui-headline-bold,
+.paginator {
   font-family: 'titillium', helvetica, arial, sans-serif;
 }
 .copy-font,
@@ -249,6 +250,11 @@ h3 {
   color: #ccc;
   font-style: italic;
 }
+h4 {
+  font-size: 16px;
+  letter-spacing: 0;
+  padding-bottom: 3px;
+}
 nav {
   background: transparent;
   float: right;
@@ -267,6 +273,7 @@ table {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
 }
 #navbar {
   width: auto;
@@ -277,7 +284,7 @@ table {
   background: -webkit-linear-gradient(top, #606060 0%, #383838 100%);
   background: -o-linear-gradient(top, #606060 0%, #383838 100%);
   background: -ms-linear-gradient(top, #606060 0%, #383838 100%);
-  background: linear-gradient(to bottom, #606060 0%, #383838 100%);
+  background: linear-gradient(top bottom, #606060 0%, #383838 100%);
   -webkit-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
   -moz-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
   box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
@@ -295,7 +302,7 @@ table {
   background: -webkit-linear-gradient(top, #606060 0%, #3a3a3a 100%);
   background: -o-linear-gradient(top, #606060 0%, #3a3a3a 100%);
   background: -ms-linear-gradient(top, #606060 0%, #3a3a3a 100%);
-  background: linear-gradient(to bottom, #606060 0%, #3a3a3a 100%);
+  background: linear-gradient(top bottom, #606060 0%, #3a3a3a 100%);
   -webkit-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
   -moz-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
   box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
@@ -310,7 +317,7 @@ table {
   background: -webkit-linear-gradient(top, #6b6b6b 0%, #484848 100%);
   background: -o-linear-gradient(top, #6b6b6b 0%, #484848 100%);
   background: -ms-linear-gradient(top, #6b6b6b 0%, #484848 100%);
-  background: linear-gradient(to bottom, #6b6b6b 0%, #484848 100%);
+  background: linear-gradient(top bottom, #6b6b6b 0%, #484848 100%);
 }
 .nav-li:hover a {
   opacity: 1;
@@ -385,7 +392,7 @@ table {
   background: -webkit-linear-gradient(top, #fbbd76 0%, #f99d33 100%);
   background: -o-linear-gradient(top, #fbbd76 0%, #f99d33 100%);
   background: -ms-linear-gradient(top, #fbbd76 0%, #f99d33 100%);
-  background: linear-gradient(to bottom, #fbbd76 0%, #f99d33 100%);
+  background: linear-gradient(top bottom, #fbbd76 0%, #f99d33 100%);
 }
 .nav-li .nav-item:hover {
   cursor: pointer;
@@ -402,6 +409,7 @@ table {
   height: auto;
   background: transparent;
   margin: 75px 0 8px 0;
+  z-index: 1;
 }
 #content-well {
   overflow: hidden;
@@ -453,6 +461,7 @@ footer .title-box {
   width: 16%;
   height: auto;
   border-bottom: none;
+  margin-bottom: 25px;
 }
 footer .side-line {
   width: 42%;
@@ -461,4 +470,121 @@ footer .side-line {
 #basho-logo {
   display: block;
   background: transparent;
+}
+.gui-dropdown-wrapper {
+  width: auto;
+  height: 30px;
+  background: url("/admin/ui/images/dropdown-left.png") left top no-repeat transparent;
+  position: relative;
+  max-width: 250px;
+}
+.gui-dropdown-wrapper.long {
+  width: 292px;
+  height: auto;
+  max-width: 1000px;
+}
+.gui-dropdown-bg {
+  width: auto;
+  height: 22px;
+  padding: 8px 0 0 5px;
+  font-size: 14px;
+  background: url("/admin/ui/images/dropdown-bg.png") left top repeat-x transparent;
+  margin: 0 28px 0 10px;
+}
+.gui-dropdown-cap {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url("/admin/ui/images/dropdown-right.png") right top no-repeat transparent;
+}
+.gui-dropdown {
+  width: 100%;
+  height: 30px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  border: 0;
+  outline: none;
+  float: left;
+  margin-top: -30px;
+}
+.pagination {
+  text-align: center;
+  font-size: 12px;
+  cursor: pointer;
+  margin-top: 25px;
+}
+.pagination li {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  display: inline-block;
+  background: #1d1d1d;
+  padding: 2px;
+  margin: 0 1px 10px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+}
+.pagination li.dots {
+  background: none;
+  border: 0;
+  letter-spacing: 1px;
+  padding: 2px 4px;
+}
+.pagination-bottom {
+  margin-bottom: 36px;
+  margin-top: 25px;
+}
+.paginator {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background: #434343;
+  background: -moz-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #616161), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -o-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #616161 0%, #434343 100%);
+  background: linear-gradient(top bottom, #616161 0%, #434343 100%);
+  color: #fff;
+  display: block;
+  border-top: 1px solid #777;
+  cursor: pointer;
+  padding: 3px 8px 4px;
+}
+.paginator:hover {
+  background: #434343;
+  background: -moz-linear-gradient(top, #777 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #777), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #777 0%, #434343 100%);
+  background: -o-linear-gradient(top, #777 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #777 0%, #434343 100%);
+  background: linear-gradient(top bottom, #777 0%, #434343 100%);
+}
+.paginator:active {
+  background: #535353;
+  cursor: pointer;
+}
+.paginator.pageNumber {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+.paginator.pageNumber:hover,
+.paginator.pageNumber:active,
+.pageNumber.active {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.pagination li.disabled .paginator:hover,
+.pagination li.disapled .paginator:active,
+.pageNumber.active:hover,
+.pageNumber.active:active {
+  background: #434343;
+  background: -moz-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #616161), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -o-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #616161 0%, #434343 100%);
+  background: linear-gradient(top bottom, #616161 0%, #434343 100%);
+  cursor: default;
 }
