--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -1,9 +1,15 @@
-{{outlet partitionFilter}}
-
-<h1 id="ring-headline" class="gui-headline-bold">
-    Ring View
-    <span id="total-number" class="gui-text"></span>
-</h1>
+<section id="title-container">
+  <div class="side-line"></div>
+  <div class="title-box">
+    <span class="vert-border-left"></span>
+    <h1 id="snapshot-headline" class="gui-headline-bold page-title">Current Ring</h1>
+    <span class="vert-border-right"></span>
+  </div>
+  <div class="side-line">
+    {{outlet partitionFilter}}
+  </div>
+  <div class="clear"></div>
+</section>
 
 <ul class="pagination gui-text">
   <li name="prev"><span class="paginator" {{action prevPage href=true target="controller"}}>Prev</span></li>
@@ -18,11 +24,11 @@
     <table class="list-table" id="ring-table">
         <thead>
             <tr class="table-head has-cut">
-                <td><h3 class="gui-headline">#</h3></td>
-                <td><h3 class="gui-headline">Owner Node</h3></td>
-                <td><h3 class="gui-headline">KV</h3></td>
-                <td><h3 class="gui-headline">Pipe</h3></td>
-                <td><h3 class="gui-headline">Search</h3></td>
+                <td><h3>#</h3></td>
+                <td><h3>Owner Node</h3></td>
+                <td><h3>KV</h3></td>
+                <td><h3>Pipe</h3></td>
+                <td><h3>Search</h3></td>
             </tr>
         </thead>
         {{#collection RiakControl.PartitionView contentBinding="controller.paginatedContent"}}
